--- a/html.html
+++ b/html.html
@@ -37,7 +37,7 @@
         }
 
         .unit-flow {
-            display: flex;
+            display: inline-flex;
             justify-content: center;
             align-items: center;
             margin: 40px 0;
@@ -224,8 +224,8 @@
             <h1>Computer Architecture: Detailed Logical Components</h1>
             <div class="student-info">
                 Prepared by: Prashant Maurya<br>
-                Roll No: [Your Roll Number]<br>
-                Computer Science Department
+                Roll No: [B24BS1274]<br>
+                AI & Data Science Department
             </div>
         </div>
 
