--- a/html.html
+++ b/html.html
@@ -37,7 +37,7 @@
         }
 
         .unit-flow {
-            display: inline-flex;
+            display: center;
             justify-content: center;
             align-items: center;
             margin: 40px 0;
